# nova

./: CONTRIBUTING.md  LICENSE  README.md  nova.code-workspace  package.json
docs/: README.md  introduction.mdx  mint.json
python/: README.md  pyproject.toml
python/examples/: README.md
python/examples/langchain/crossmint/: custodial_solana_wallet_example.py  pyproject.toml  smart_evm_wallet_example.py
python/examples/langchain/solana/: example.py  pyproject.toml
python/examples/langchain/uniswap/: example.py  pyproject.toml
python/examples/langchain/web3/: example.py  pyproject.toml
python/examples/solana/wallet/: example.py  pyproject.toml
python/scripts/: create_plugin.py
python/src/adapters/langchain/: README.md  pyproject.toml
python/src/adapters/langchain/goat_adapters/langchain/: adapter.py
python/src/goat-sdk/: README.md  pyproject.toml
python/src/goat-sdk/goat/classes/: plugin_base.py  wallet_client_base.py
python/src/goat-sdk/goat/decorators/: tool.py
python/src/plugins/1inch/: README.md  pyproject.toml
python/src/plugins/1inch/goat_plugins/inch1/: __init__.py  service.py
python/src/plugins/allora/: README.md  pyproject.toml
python/src/plugins/allora/goat_plugins/allora/: __init__.py  service.py
python/src/plugins/coingecko/: README.md  pyproject.toml
python/src/plugins/coingecko/goat_plugins/coingecko/: __init__.py  service.py
python/src/plugins/dexscreener/: README.md  pyproject.toml
python/src/plugins/dexscreener/goat_plugins/dexscreener/: __init__.py  service.py
python/src/plugins/erc20/: README.md  pyproject.toml
python/src/plugins/erc20/goat_plugins/erc20/: __init__.py  service.py
python/src/plugins/farcaster/: README.md  pyproject.toml
python/src/plugins/farcaster/goat_plugins/farcaster/: __init__.py  service.py
python/src/plugins/jsonrpc/: README.md  pyproject.toml
python/src/plugins/jsonrpc/goat_plugins/jsonrpc/: __init__.py  service.py
python/src/plugins/jupiter/: README.md  pyproject.toml
python/src/plugins/jupiter/goat_plugins/jupiter/: __init__.py  service.py
python/src/plugins/nansen/: README.md  pyproject.toml
python/src/plugins/nansen/goat_plugins/nansen/: __init__.py  service.py
python/src/plugins/opensea/: README.md  pyproject.toml
python/src/plugins/opensea/goat_plugins/opensea/: __init__.py  service.py
python/src/plugins/rugcheck/: README.md  pyproject.toml
python/src/plugins/rugcheck/goat_plugins/rugcheck/: __init__.py  service.py
python/src/plugins/spl_token/: README.md  pyproject.toml
python/src/plugins/spl_token/goat_plugins/spl_token/: __init__.py  parameters.py  service.py  tokens.py
python/src/plugins/superfluid/: README.md  pyproject.toml
python/src/plugins/superfluid/goat_plugins/superfluid/: __init__.py  service.py
python/src/plugins/uniswap/: README.md  pyproject.toml
python/src/plugins/uniswap/goat_plugins/uniswap/: __init__.py  service.py
python/src/plugins/uniswap/tests/: test_uniswap_plugin.py
python/src/wallets/crossmint/: README.md  pyproject.toml
python/src/wallets/crossmint/goat_wallets/crossmint/: __init__.py  api_client.py  base.py  custodial_solana_wallet.py  faucet.py  faucet_plugin.py  mint.py  mint_plugin.py  service.py  smart_wallet.py  wallet.py  wallet_plugin.py
python/src/wallets/crossmint/tests/: conftest.py  test_api_client.py  test_custodial_wallet.py  test_smart_wallet.py
python/src/wallets/evm/: README.md  pyproject.toml
python/src/wallets/evm/goat_wallets/evm/: evm_wallet_client.py  send_eth.py
python/src/wallets/solana/: README.md  pyproject.toml
python/src/wallets/solana/goat_wallets/solana/: wallet.py
python/src/wallets/web3/: README.md  pyproject.toml
python/src/wallets/web3/goat_wallets/web3/: wallet.py
typescript/: README.md  package.json
typescript/.changeset/: config.json
typescript/examples/eleven-labs/conversational-agent/: README.md
typescript/examples/langchain/cosmos/: CHANGELOG.md  index.ts
typescript/examples/langchain/lit/: package.json
typescript/examples/langchain/safe/: package.json
typescript/examples/langchain/viem/: index.ts  package.json
typescript/examples/model-context-protocol/mode/: CHANGELOG.md  README.md
typescript/examples/vercel-ai/abstract/: package.json
typescript/examples/vercel-ai/allora/: package.json
typescript/examples/vercel-ai/chromia/: index.ts  package.json
typescript/examples/vercel-ai/coingecko/: index.ts  package.json
typescript/examples/vercel-ai/debridge-bridging/: CHANGELOG.md  index.ts  package.json
typescript/examples/vercel-ai/form-curves/: README.md  index.ts
typescript/examples/vercel-ai/fuel/: CHANGELOG.md
typescript/examples/vercel-ai/headless-checkout/: index.ts
typescript/examples/vercel-ai/modespray/: CHANGELOG.md  package.json
typescript/examples/vercel-ai/opensea/: CHANGELOG.md  package.json
typescript/examples/vercel-ai/polymarket/: README.md  create-or-derive-api-key.ts  index.ts  package.json  setup-allowance.ts
typescript/examples/vercel-ai/send-nft-to-twitter/: README.md  package.json
typescript/examples/vercel-ai/sns/: CHANGELOG.md  README.md
typescript/examples/vercel-ai/viem/: CHANGELOG.md
typescript/examples/virtuals-game/viem/: index.ts
typescript/scripts/: package.json
typescript2/: pnpm-lock.yaml
typescript2/examples/: README.md
typescript2/examples/eleven-labs/conversational-agent/: CHANGELOG.md  package.json
typescript2/examples/eliza/: README.md
typescript2/examples/langchain/cosmos/: package.json
typescript2/examples/langchain/lit/: CHANGELOG.md
typescript2/examples/langchain/safe/: CHANGELOG.md  index.ts
typescript2/examples/langchain/viem/: CHANGELOG.md
typescript2/examples/model-context-protocol/mode/: package.json
typescript2/examples/vercel-ai/abstract/: CHANGELOG.md  README.md  index.ts
typescript2/examples/vercel-ai/allora/: CHANGELOG.md  index.ts
typescript2/examples/vercel-ai/chromia/: CHANGELOG.md
typescript2/examples/vercel-ai/coingecko/: CHANGELOG.md
typescript2/examples/vercel-ai/crossmint-smart-wallets/: CHANGELOG.md  (+2 more)
typescript2/scripts/: createPlugin.ts
(+42 files in other folders)
