[tool.poetry]
name = "nova-sdk-monorepo"
version = "0.0.1"
description = "Nova is an open-source framework for connecting AI agents to any onchain app"
readme = "README.md"
keywords = ["nova", "sdk", "web3", "agents", "ai"]
repository = "https://github.com/novaailab/nova"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"

# Core
nova-sdk = { path = "src/nova-sdk/" }

# Plugins
nova-sdk-plugin-1inch = { path = "src/plugins/1inch/" }
nova-sdk-plugin-allora = { path = "src/plugins/allora/" }
nova-sdk-plugin-coingecko = { path = "src/plugins/coingecko/" }
nova-sdk-plugin-dexscreener = { path = "src/plugins/dexscreener/" }
nova-sdk-plugin-erc20 = { path = "src/plugins/erc20/" }
nova-sdk-plugin-farcaster = { path = "src/plugins/farcaster/" }
nova-sdk-plugin-jsonrpc = { path = "src/plugins/jsonrpc/" }
nova-sdk-plugin-jupiter = { path = "src/plugins/jupiter/" }
nova-sdk-plugin-nansen = { path = "src/plugins/nansen/" }
nova-sdk-plugin-opensea = { path = "src/plugins/opensea/" }
nova-sdk-plugin-rugcheck = { path = "src/plugins/rugcheck/" }
nova-sdk-plugin-spl-token = { path = "src/plugins/spl_token/" }
nova-sdk-plugin-superfluid = { path = "src/plugins/superfluid/" }
nova-sdk-plugin-uniswap = { path = "src/plugins/uniswap/" }

# Wallets
nova-sdk-wallet-crossmint = { path = "src/wallets/crossmint/" }
nova-sdk-wallet-evm = { path = "src/wallets/evm/" }
nova-sdk-wallet-solana = { path = "src/wallets/solana/" }
nova-sdk-wallet-web3 = { path = "src/wallets/web3/" }

# Adapters
nova-sdk-adapter-langchain = { path = "src/adapters/langchain/" }

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/novaailab/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
