[tool.poetry]
name = "nova-sdk-example-langchain-solana"
version = "0.1.0"
description = "nova example for Langchain with Solana"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["nova", "sdk", "solana", "agents", "ai"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "example.py" },
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "*"
langchain-openai = "*"
python-dotenv = "*"
solana = {version = ">=0.30.2", extras = ["spl"]}
solders = ">=0.18.0"
nova-sdk = "*"
nova-sdk-wallet-solana = "*"
nova-sdk-adapter-langchain = "*"
nova-sdk-plugin-spl-token = "^0.1.0"
nova-sdk-plugin-jupiter = "^0.1.0"
nova-sdk-plugin-erc20 = "^0.1.0"
nova-sdk-wallet-crossmint = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
nova-sdk = { path = "../../../src/nova-sdk", develop = true }
nova-sdk-wallet-solana = { path = "../../../src/wallets/solana", develop = true }
nova-sdk-adapter-langchain = { path = "../../../src/adapters/langchain", develop = true }
nova-sdk-plugin-jupiter = { path = "../../../src/plugins/jupiter", develop = true }
nova-sdk-wallet-crossmint = { path = "../../../src/wallets/crossmint", develop = true }
nova-sdk-plugin-erc20 = { path = "../../../src/plugins/erc20", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
