[tool.poetry]
name = "nova-sdk-example-langchain-uniswap"
version = "0.1.0"
description = "nova example for Langchain with uniswap"
authors = ["Andrea Villa <andreakarimodm@gmail.com>"]
readme = "README.md"
keywords = ["nova", "sdk", "web3", "agents", "ai"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "example.py" },
]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.2"
langchain-openai = "^0.2.14"
python-dotenv = "^1.0.1"
web3 = ">=6.20.3"
nova-sdk = "^0.1.0"
nova-sdk-wallet-evm = "^0.1.1"
nova-sdk-wallet-web3 = "0.1.2"
nova-sdk-plugin-erc20 = "^0.1.0"
nova-sdk-adapter-langchain = "^0.1.0"
nova-sdk-plugin-uniswap = "^0.1.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
nova-sdk = { path = "../../../src/nova-sdk", develop = true }
nova-sdk-wallet-evm = { path = "../../../src/wallets/evm", develop = true }
nova-sdk-wallet-web3 = { path = "../../../src/wallets/web3", develop = true }
nova-sdk-plugin-erc20 = { path = "../../../src/plugins/erc20", develop = true }
nova-sdk-plugin-coingecko = { path = "../../../src/plugins/coingecko", develop = true }
nova-sdk-adapter-langchain = { path = "../../../src/adapters/langchain", develop = true }
nova-sdk-plugin-uniswap = { path = "../../../src/plugins/uniswap", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
