[tool.poetry]
name = "nova-sdk-plugin-nansen"
version = "0.1.0"
description = "Nansen plugin for nova SDK"
authors = ["nova SDK Team"]
readme = "README.md"
keywords = ["nova", "sdk", "web3", "agents", "ai", "nansen"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "nova_plugins/nansen" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"
nova-sdk = "^0.1.1"
pydantic = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
nova-sdk = { path = "../../nova-sdk", develop = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
