[tool.poetry]
name = "nova-sdk-plugin-rugcheck"
version = "0.1.2"
description = "A Python rugcheck plugin for the nova SDK"
authors = ["nova SDK Team"]
packages = [
    { include = "nova_plugins" }
]

[tool.poetry.dependencies]
python = "^3.9"
nova-sdk = "^0.1.1"
aiohttp = "^3.8.4"
pydantic = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "."
