[tool.poetry]
name = "nova-sdk-plugin-spl-token"
version = "0.1.2"
description = "nova plugin for spl_token"
authors = ["Your Name <your_email@example.com>"]
readme = "README.md"
keywords = ["nova", "sdk", "agents", "ai", "spl_token"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "nova_plugins/spl_token" },
]

[tool.poetry.dependencies]
python = "^3.10"
nova-sdk = "*"
nova-sdk-wallet-solana = "*"
solders = ">=0.18.0"
solana = { version = ">=0.30.2", extras = ["spl"] }

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-asyncio = "*"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
nova-sdk = { path = "../../nova-sdk", develop = true }
nova-sdk-wallet-solana = { path = "../../wallets/solana", develop = true }
solana = {version = ">=0.30.2", extras = ["spl"]}

[tool.ruff]
line-length = 120
target-version = "py312"
