[tool.poetry]
name = "nova-sdk-plugin-uniswap"
version = "0.1.1"
description = "nova plugin for uniswap"
authors = ["Your Name <your_email@example.com>"]
readme = "README.md"
keywords = ["nova", "sdk", "agents", "ai", "uniswap"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "nova_plugins/uniswap" },
]

[tool.poetry.dependencies]
python = "^3.10"
nova-sdk = "^0.1.0"
nova-sdk-wallet-evm = "^0.1.1"
nova-sdk-wallet-web3 = "^0.1.3"
nova-sdk-plugin-erc20 = "^0.1.0"
aiohttp = "^3.0"  # For async HTTP requests

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.6"
nova-sdk = { path = "../../nova-sdk", develop = true }
nova-sdk-wallet-evm = { path = "../../wallets/evm", develop = true }

[tool.ruff]
line-length = 120
target-version = "py312"
