[tool.poetry]
name = "nova-sdk-wallet-crossmint"
version = "0.1.5"
description = "Crossmint wallet implementation for nova SDK"
authors = ["nova SDK Team"]
readme = "README.md"
keywords = ["nova", "sdk", "web3", "agents", "ai", "crossmint", "wallet"]
homepage = "https://ohmynova.dev/"
repository = "https://github.com/nova-sdk/nova"
packages = [
    { include = "nova_wallets/crossmint" },
]

[tool.poetry.dependencies]
python = "^3.10"
nova-sdk = "^0.1.0"
nova-sdk-wallet-evm = "^0.1.0"
nova-sdk-wallet-solana = "^0.1.0"
web3 = ">=6.0.0"
eth-account = ">=0.8"
base58 = ">=2.1"
setuptools = ">=70"

[tool.poetry.group.test.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/nova-sdk/nova/issues"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = "src"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
nova-sdk = { path = "../../nova-sdk", develop = true }
nova-sdk-wallet-evm = { path = "../evm", develop = true }
nova-sdk-wallet-solana = { path = "../solana", develop = true }
ruff = "^0.8"

[tool.ruff]
line-length = 120
target-version = "py312"
